[package]
name = "dio"
version = "1.0.0"
description = "Deterministic Intelligence Orchestrator"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pngen/dio"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "dio"
path = "src/lib.rs"